<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:foregroundGravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="256dp"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/tv_welcome"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.41"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/askLogin"
        android:id="@+id/tv_askLogin"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/roll_number"
        android:id="@+id/tv_roll"
        android:layout_weight="0.16"
        android:gravity="fill_horizontal|center_vertical|center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_roll"
        android:hint="@string/enter_your_iitm_roll_number_7_alphanumerics" />

    <TextView
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:id="@+id/tv_password"
        android:gravity="center_vertical|fill_vertical"
        android:layout_weight="0.13" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:hint="@string/ldap_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/bt_submit"
        android:layout_gravity="center_horizontal" />

</LinearLayout>